[package]
name = "nucleotide"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.22", optional = true, features = ["cargo", "derive"] }
atty = { version = "0.2.14", optional = true }
derive_builder = "0.20.0"
env_logger = { version = "0.11.3", optional = true }
log = "0.4.21"
nucleo = "0.5.0"
regex = "1.10.4"
shlex = { version = "1.3.0", optional = true }
time = "0.3.36"

# [build-dependencies]
# clap = { version = "4.5.6", features = ["cargo"], optional = true }

# [features]
# clap = ["dep:clap"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:atty", "dep:shlex", "dep:env_logger"]

[profile.release]
lto = true
debug = false





# clap = { version = "4.5.6", optional = true, features = ["cargo"] }
#atty = "0.2.14"
#atty = { version = "0.2.14", optional = true }
#env_logger = { version = "0.11.3", optional = true }
#log = "0.4.17"
#nucleo = "0.5.0"
#regex = "1.10.4"
#shlex = { version = "1.1.0", optional = true }
#shlex = { version = "1.1.0", optional = true }
#time = "0.3.36"

# [features]
# clap = ["dep:clap"]
